<resources>
    <string name="app_name">Joyful Chatroom</string>
    <string name="google_logo">Click the button and Start chat</string>
    <string name="todo">TODO</string>
    <string name="chatTitle">Global Chat Room</string>
    <string name="messageHint">Start Messaging</string>
    <string name="CameraDecription">사진</string>
    <string name="SendDescription">전송</string>
    <string name="default_notification_channel_id">1</string>
    <string name="Chatroom_Name">Joyful Chat Room</string>
    <string name="Messagebox_hint">Start Messaging</string>
    <string name="this_is_a_dummy_text_message">this is a dummy text message</string>
    <string name="sendImage_button">sendImage_button</string>
    <string name="cameraImage_button">cameraImage_button</string>
    <string name="user_name">name</string>
    <string name="timestamp">23:59</string>
    <string name="start_message">Start Sending messages to the chat room</string>
    <string name="text_dummy">This is a log message to make the UI looks good when someone sends some big texts.</string>
    <string name="login_expression">Welcome</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_to_your_account">Sign In to your account</string>
    <string name="forgot_your_accounts">forgot your accounts?</string>
    <string name="hint_password">Password</string>
    <string name="hint_accountid">AccountID</string>
    <string name="chatroom_title">CHATROOM</string>
</resources>