<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/another_user"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <TextView
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/user_image"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="textStart"
        android:layout_marginEnd="5dp"
        android:text="@string/user_name"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/chat_image"
        android:layout_width="0dp"
        android:layout_height="333dp"
        android:contentDescription="@string/todo"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/user_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.captain_miao.optroundcardview.OptRoundCardView
        android:id="@+id/optRoundCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/user_image"
        app:layout_constraintTop_toTopOf="parent"
        app:optRoundCardCornerRadius="15dp"
        app:optRoundCardElevation="5dp">
        <TextView
            android:padding="11dp"
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/this_is_a_dummy_text_message"
            android:textAlignment="textStart"
            android:textColor="#323232"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/user_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.github.captain_miao.optroundcardview.OptRoundCardView>

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@+id/optRoundCardView"
        app:layout_constraintBottom_toBottomOf="@+id/optRoundCardView"
        android:text="@string/timestamp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>